--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,2 @@
 itsbc-commons-api.server.port=9200
+itsbc-commons-key-service-url=http://localhost:${itsbc-commons-api.server.port}/itsbc-commons-api/key-pair
